src/main/java/oo/solid/dip/sample/good/Vehicle.java
package oo.solid.dip.sample.good;

public interface Vehicle {
    String getSpecifications();
}
