src/main/java/oo/solid/dip/sample/bad/Car.java
package oo.solid.dip.sample.bad;

public class Car {
    public String getSpecifications() {
        return "";
    }
}
